--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
   inputs:
     packageType: sdk
     version: 6.0.x
-    installationPath: $(Agent.ToolsDirectory)/dotnet
+    installationPath: $(Agent.ToolsDirectory)/dotnet1
 
 - task: DotNetCoreCLI@2
   displayName: Restore Nuget Packages
