Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,6 @@
-trigger: 'none' # will disable CI builds entirely
+# trigger: 'none' # will disable CI builds entirely
+trigger: 
+- main
 
 pool: Default
   # vmImage: 'windows-2019'
