--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,7 @@ steps:
 - task: DotNetCoreCLI@2
   displayName: Build Web App
   inputs:
+    command: build
     projects: '**/WebApp.csproj'
     arguments: '--configuration $(BuildConfiguration)'
 
